; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_lantiq_wdt.c_ltq_wdt_falcon_bootstatus_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_lantiq_wdt.c_ltq_wdt_falcon_bootstatus_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.regmap = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"lantiq,rcu\00", align 1
@LTQ_FALCON_SYS1_CPU0RS = common dso_local global i32 0, align 4
@LTQ_FALCON_SYS1_CPU0RS_MASK = common dso_local global i32 0, align 4
@LTQ_FALCON_SYS1_CPU0RS_WDT = common dso_local global i32 0, align 4
@WDIOF_CARDRESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @ltq_wdt_falcon_bootstatus_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ltq_wdt_falcon_bootstatus_get(%struct.device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.regmap*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %3, align 8
  %7 = load %struct.device*, %struct.device** %3, align 8
  %8 = getelementptr inbounds %struct.device, %struct.device* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.regmap* @syscon_regmap_lookup_by_phandle(i32 %9, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store %struct.regmap* %10, %struct.regmap** %4, align 8
  %11 = load %struct.regmap*, %struct.regmap** %4, align 8
  %12 = call i64 @IS_ERR(%struct.regmap* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load %struct.regmap*, %struct.regmap** %4, align 8
  %16 = call i32 @PTR_ERR(%struct.regmap* %15)
  store i32 %16, i32* %2, align 4
  br label %34

17:                                               ; preds = %1
  %18 = load %struct.regmap*, %struct.regmap** %4, align 8
  %19 = load i32, i32* @LTQ_FALCON_SYS1_CPU0RS, align 4
  %20 = call i32 @regmap_read(%struct.regmap* %18, i32 %19, i32* %5)
  store i32 %20, i32* %6, align 4
  %21 = load i32, i32* %6, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %17
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %2, align 4
  br label %34

25:                                               ; preds = %17
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* @LTQ_FALCON_SYS1_CPU0RS_MASK, align 4
  %28 = and i32 %26, %27
  %29 = load i32, i32* @LTQ_FALCON_SYS1_CPU0RS_WDT, align 4
  %30 = icmp eq i32 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %25
  %32 = load i32, i32* @WDIOF_CARDRESET, align 4
  store i32 %32, i32* %2, align 4
  br label %34

33:                                               ; preds = %25
  store i32 0, i32* %2, align 4
  br label %34

34:                                               ; preds = %33, %31, %23, %14
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local %struct.regmap* @syscon_regmap_lookup_by_phandle(i32, i8*) #1

declare dso_local i64 @IS_ERR(%struct.regmap*) #1

declare dso_local i32 @PTR_ERR(%struct.regmap*) #1

declare dso_local i32 @regmap_read(%struct.regmap*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
